styles.css
/*=== Reset ===*/

html, body, h1, h2, h3, h4, h5, h6, p {
  margin: 0;
  padding: 0;
}

body {
  display: flex;
  flex-direction: column;
  height: 100%;
}

/*=== Background Colors ===*/

.purple-1 {
  background: #EAEAF4;
}

.purple-2 {
  background: #A9AAD2;
}

.purple-3 {
  background: #5356A4;
}

.purple-4 {
  background: #1F1F3D;;
}


/*=== Fonts ===*/

.header-text {
  color: #EAEAF4;
  font-family: 'Open Sans';
  font-weight: 600;
  padding: 1rem;
}

.body-text {
  font-family: 'Open Sans';
}

/*=== open-nav-filter ===*/

.hidden {
  display: none!important;
}

.menu-nav-close-icon {
  width: 2.75rem;
  height: auto;
  margin: 1rem;
}

.open-nav-filter {
  position: absolute;
  background: #1F1F3D;
  width: 100%;
  height: 13rem;
  display: grid;
  z-index: 3;
}

.open-nav-top {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  position:relative;
  z-index: 3;
}

.open-nav-bottom {
  display: grid;
  margin: 2.5%;
}

.show-starred-ideas {
  width: 100%;
    height: 3rem;
    border: 0.1rem solid #353567;
    border-radius: .15rem;
    background-color: #5356A4;
    color: #E9E9F3;
    font-family: 'Open Sans';
    font-weight: 600;
    font-size: 1.35rem;
}

.filter-star-ideas {
  color: #BFBFDD;
  font-family: 'Open Sans';
  font-weight: 600;
  font-size: 1.2rem;
  margin-bottom: 1rem;
}

.whole-filter-section {
  background-color: gray;
  opacity: 50%;
  overflow: auto;
  bottom: 0;
  top: 0;
  right: 0;
  left: 0;
  position: absolute;
  z-index: 1;
}

/*=== upper-half-nav-input ===*/
.menu {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  height: 100%;
  width: 100%;
}

.header-text {
  display: grid;
  justify-self: center;
  font-size: 1.35rem;
}

.menu-header-icon {
  display: grid;
  width: 3rem;
  height: 2rem;
  padding-top: 0.25rem;
  padding-left: 0.25rem;
}

/*=== title-form ===*/

.title-form {
  display: flex;
  flex-direction: column;
  margin-left: 2.5%;
  margin-right: 2.5%;
  margin-top: 4%;
}

.title-text{
  font-family: 'Open Sans';
  font-weight: 600;
  color: #1f1f3d;
  font-size: 1rem;
  margin-bottom: 0.25rem;
}

.title-input {
  border: 0.1rem solid #5356a4;
  border-radius: .15rem;
  height: 3rem;
}

/*=== body-form ===*/

.body-form {
  display: flex;
  flex-direction: column;
  margin-left: 2.5%;
  margin-right: 2.5%;
  margin-top: 4%;
}

.body-text {
  font-family: 'Open Sans';
  font-weight: 600;
  color: #1f1f3d;
  font-size: 1rem;
  margin-bottom: 0.25rem;
}

.body-input {
  border: 0.1rem solid #5356a4;
  border-radius: .15rem;
  height: 6rem;
}

/*=== save-form ===*/

.save-button-section {
  display: flex;
  margin-left: 2.5%;
  margin-right: 2.5%;
  padding-top: 1.5rem;
}

.save-button {
  width: 100%;
  height: 3rem;
  border: 0.1rem solid #5356a4;
  border-radius: .15rem;
  background-color: #353567;
  color: #EAEAF4;
  font-family: 'Open Sans';
  font-weight: 600;
  font-size: 1.35rem;
}

.save-button:hover {
  cursor: pointer;
}

.save-button.disabled {
  background-color: #696969;
  border: #696969;
}

.save-button.disabled:hover {
  cursor: default;
}

/*=== search-form ===*/

.search-icon {
  width: 1.5rem;
  height: auto;
}

.search-box-input {
  width: 100%;
}

.search-box-input::placeholder {
  font-family: 'Open Sans';
  color: #a9aad2;
  font-size: 1rem;
  padding-left: 0.5rem;
}

.search-section {
  display: flex;
  margin-left: 2.5%;
  margin-right: 2.5%;
  margin-top: 1.5rem;
  margin-bottom: 1rem;
  border: 0.1rem solid #5356a4;
  border-radius: .15rem;
}

.search-icon-button {
  background-color: #353567;
  width: 3rem;
  height: 3rem;
  border: 0rem;
}
/*=== idea-cards && all-cards ===*/

.all-cards {
  display: flex;
  flex-direction: column;
  margin-left: 2.5%;
  margin-right: 2.5%;
  padding-top: 1.5rem;
}

.card {
  display: flex;
  flex-direction: column;
  width: 100%;
  border: 0.1rem solid #1F1F3D;

}

/*===*** subsection card-header idea-cards && all-cards ===*/

.card-header {
  display: flex;
  justify-content: space-between;
  width: 100%;
  height: 2.5rem;
  background-color: #1F1F3D;
}

.card-star-favorite-icon {
  width: 2.5rem;
  height: auto;
}

.card-delete-icon {
 width: 2.5rem;
 height: auto;
}

/*===*** subsection card-body idea-cards && all-cards ===*/

.card-body {
  margin: 1rem;
  height: 100%;
  max-height: 20rem;
  min-height: 8rem;
  overflow: auto;
}

.card-idea-title {
  margin-bottom: 1rem;
  color: #1f1f3d;
  font-family: 'Open Sans';
  font-weight: 600;
  font-size: 1.35rem;
}

.card-idea-text {
  color: #1f1f3d;
  font-family: 'Open Sans';
  font-weight: 500;
  font-size: 1.35rem;
}

/*===*** subsection card-footer idea-cards && all-cards ===*/

.card-footer {
  display: flex;
  width: 100%;
  height: 2.5rem;
  background-color: #5356a4;
  border-top: 0.1rem solid #1F1F3D;
  align-items: center;
}

.card-footer p {
  font-family: 'Open Sans';
  color: #ffffff;
  font-weight: 600;
}

.card-add-comment-icon {
  width: 2.5rem;
  height: auto;
}

/*=== main section ===*/

.ideas {
  display: flex;
  flex: 1;
  flex-direction: column;
}

.idea-form {
  display: flex;
  flex-grow: 2;
  flex-direction: column;
  justify-content: center;
}

.idea-cards {
  flex-grow: 3;
  overflow: auto;
}

/*=== media queries ===*/

@media (min-width: 425px) and (max-width: 940px){
  .all-cards {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
  }

  .card {
    max-width: 20rem;
    width: 100%;
    margin: 1rem;
  }
}

@media only screen and (max-width: 940px) {
  body {
    flex-direction: column;
  }

  .header-text {
    font-size: 18px;
    padding: 10px;
  }

  .idea-form {
    flex-grow: 1;
  }

  .menu-buttons-wrapper {
    display: none;
  }

  .header-text {
    text-align: center;
  }

  .card {
    display: flex;
    flex-direction: column;
    margin-bottom: 2rem;
  }
}

/* @media (min-width: 600px, max-width: 900px) {
  body {
    display: grid;
    grid-template-columns: 1fr 3fr;
  }

  .idea-form {
    padding-left: 25%;
    padding-right: 25%;
  }

  .all-cards {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-gap: 2.5%;
  }
} */

@media (min-width: 940px) {
  body {
    display: grid;
    grid-template-columns: 1fr 3fr;
  }

  .menu {
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 100%;
  }

  .menu-header-icon {
    display: none;
  }

  .header-text {
    margin-top: 0.5rem;
    justify-self: flex-start;
  }

  .header-text-wrapper {
    width: 100%;
  }

  .filter-star-ideas {
    display: grid;
    color: #BFBFDD;
    font-family: 'Open Sans';
    font-weight: 600;
    font-size: 1rem;
    margin-bottom: 2rem;
    margin-left: 1rem;
  }

  .filter-starred-ideas-wrapper {
    width: 100%;
  }

  .menu-buttons-wrapper {
    width: 100%;
    display: flex;
    align-items: center;
    flex-direction: column;
    padding-top: 2rem;
    padding-bottom: 2rem;
    border-top: 0.1rem;
    border-bottom: 0.1rem;
    border-style: solid;
    border-color: #5356A4;
  }

  .show-starred-ideas {
    width: 90%;
    height: 3rem;
    border: 0.1rem solid #353567;
    border-radius: .15rem;
    background-color: #5356A4;
    color: #E9E9F3;
    font-family: 'Open Sans';
    font-weight: 600;
    font-size: 1.35rem;
  }


  .idea-form {
    padding-left: 25%;
    padding-right: 25%;
  }

  .all-cards {
    display: grid;
    grid-template-columns: repeat(auto-fill, 20rem);
    grid-gap: 2.5%;
  }
}
@media (max-width: 980px) {
  .show-starred-ideas {
    font-size: 1.25rem;
  }
}

